--- a/androidApp/app/src/main/res/values/strings.xml
+++ b/androidApp/app/src/main/res/values/strings.xml
@@ -22,4 +22,26 @@
     <string name="title_activity_schedule_list_screen">ScheduleListScreen</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_schedule_form">ScheduleForm</string>
+
+
+
+
+
+    <string name="current_date">June, 2016</string>
+    <string name="add_event">ADD CALENDAR EVENT</string>
+    <string name="sun">SUN</string>
+    <string name="mon">MON</string>
+    <string name="tue">TUE</string>
+    <string name="wed">WED</string>
+    <string name="thu">THU</string>
+    <string name="fri">FRI</string>
+    <string name="sat">SAT</string>
+    <string name="last_date">30</string>
+
+
+
+
+
+
+
 </resources>
