--- a/androidApp/app/src/main/res/values/strings.xml
+++ b/androidApp/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="last_date">30</string>
     <string name="title_activity_new_appoint">NewAppoint</string>
     <string name="title_activity_add_member">Add_member</string>
+    <string name="title_activity_patient_list">PatientList</string>
 
 
 </resources>
