--- a/androidApp/app/src/main/res/values/strings.xml
+++ b/androidApp/app/src/main/res/values/strings.xml
@@ -13,15 +13,15 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="title_activity_home_screen">HomeScreen</string>
+    <string name="title_activity_home_screen">Home Screen</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="title_activity_schedule_list_screen">ScheduleListScreen</string>
+    <string name="title_activity_schedule_list_screen">Schedules List</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="title_activity_schedule_form">ScheduleForm</string>
+    <string name="title_activity_schedule_form">Schedule</string>
 
 
     <string name="current_date">June, 2016</string>
@@ -34,11 +34,11 @@
     <string name="fri">FRI</string>
     <string name="sat">SAT</string>
     <string name="last_date">30</string>
-    <string name="title_activity_new_appoint">NewAppoint</string>
-    <string name="title_activity_add_member">Add_member</string>
+    <string name="title_activity_new_appoint">New Appoint</string>
+    <string name="title_activity_add_member">Add Patient</string>
     <string name="title_activity_appointment_list">AppointmentList</string>
     <string name="section_format">Hello World from section: %1$d</string>
-    <string name="title_activity_patient_list">PatientList</string>
+    <string name="title_activity_patient_list">Patient List</string>
 
 
 </resources>
